--- a/BibleVerses/index.htm
+++ b/BibleVerses/index.htm
@@ -6,15 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <title>Bible Verse</title>
 </head>
 <body>
   
-   
+ 
+<div id="home">
 
+  <div id="getbtns">
+    <button id="getVerse-btn" class="btn btn-primary btn-lg">Get Verse</button> 
+    <button onclick="showSpecSection()" id="getVerse-btn" class="btn btn-primary btn-lg" >Specific</button>
+   </div>
+  
+   <div id="verseCard" class="card">
+    <div class="card-body">
+      <blockquote class="blockquote mb-0">
+        <p id="verseText" ></p>
+        <footer id="fromText" class="blockquote-footer"></footer>
+      </blockquote>
+    </div>
+  </div>
 
-<section id="specific-verse">
+</div>
+  
+
+ 
+
+<div id="specific-verse">
+
               <h1 class="display-1" id="heading">Holy Bible</h1>
+
 
     <div id="container">
         
@@ -38,11 +60,10 @@
         </div>
     </div>
 
-  </section>
+  </div>
 
-<script src="script.js">
-  
-</script>
+<script type="module" src="script.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
 
