--- a/BibleVerses/index.htm
+++ b/BibleVerses/index.htm
@@ -6,37 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Bible Verse</title>
+    <title>Document</title>
 </head>
 <body>
   
- 
-<div id="home">
+   
 
-  <div id="getbtns">
-    <button id="getVerse-btn" class="btn btn-primary btn-lg">Get Verse</button> 
-    <button onclick="showSpecSection()" id="getVerse-btn" class="btn btn-primary btn-lg" >Specific</button>
-   </div>
-  
-   <div id="verseCard" class="card">
-    <div class="card-body">
-      <blockquote class="blockquote mb-0">
-        <p id="verseText" ></p>
-        <footer id="fromText" class="blockquote-footer"></footer>
-      </blockquote>
-    </div>
-  </div>
 
-</div>
-  
-
- 
-
-<div id="specific-verse">
-
+<section id="specific-verse">
               <h1 class="display-1" id="heading">Holy Bible</h1>
-
 
     <div id="container">
         
@@ -60,10 +38,11 @@
         </div>
     </div>
 
-  </div>
+  </section>
 
-<script type="module" src="script.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="script.js">
+  
+</script>
 
 
 
